--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "llvm-project"]
 	path = llvm-project
-	url = https://github.com/AndHager/llvm-project
+	url = git@gitlab.lrz.de:aemy/administration/projects/scale4edge/llvm-project.git
 [submodule "embench-iot"]
 	path = embench-iot
-	url = https://gitlab.lrz.de/aemy/administration/projects/scale4edge/embench-iot
+	url = git@gitlab.lrz.de:aemy/administration/projects/scale4edge/embench-iot.git
