--- a/llvm-pass-plugin/CMakeLists.txt
+++ b/llvm-pass-plugin/CMakeLists.txt
@@ -1,14 +1,18 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.8)
+
+project("CDFG Analyzer" VERSION 1.0.0)
 
 find_package(LLVM REQUIRED CONFIG)
 add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 
+INCLUDE_DIRECTORIES(/usr/lib/x86_64-linux-gnu)
+LINK_DIRECTORIES(/usr/include)
 add_library(LLVMCDFG MODULE
-    # List your source files here.
     src/pass.cpp
-    src/graph.h
 )
+
+TARGET_LINK_LIBRARIES(LLVMCDFG mgclient)
 
 SET(CMAKE_CXX_FLAGS "-Wall")
