WIP embench build for etiss

--- a/llvm-pass-plugin/CMakeLists.txt
+++ b/llvm-pass-plugin/CMakeLists.txt
@@ -7,8 +7,8 @@ add_definitions(${LLVM_DEFINITIONS})
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 
-INCLUDE_DIRECTORIES(/usr/lib/x86_64-linux-gnu)
-LINK_DIRECTORIES(/usr/include)
+INCLUDE_DIRECTORIES(/opt/riscv/lib/riscv32-unknown-linux-gnu)
+LINK_DIRECTORIES(/opt/riscv/include)
 add_library(LLVMCDFG MODULE
     src/pass.cpp
 )
